# online-school

./: .env.example  .gitignore  Dockerfile  README.md  course_fixture.json  docker-compose.yml  groups_users_fixture.json  main.py  payment_fixture.json  pyproject.toml  users_fixture.json
.github/workflows/: cl.yaml
config/: celery.py  settings.py  urls.py
school/: admin.py  models.py  permissions.py  serializers.py  services.py  tests.py  urls.py  validators.py  views.py
school/management/commands/: add_payment.py
school/migrations/: 0001_initial.py  0002_initial.py
school/templates/school/: base.html  list_lessons.html
static/css/: base.css  home.css
users/: admin.py  forms.py  models.py  permissions.py  serializers.py  services.py  tasks.py  urls.py  views.py
users/management/commands/: add_group_and_users.py  add_payment.py
users/migrations/: 0001_initial.py
users/templates/users/: login.html  password_reset.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_email.html  register.html  update_profile.html  users_list.html  welcome.html
