[tool.poetry]
name = "projectonlineschool"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.2.1"
psycopg2 = "^2.9.10"
pillow = "^11.2.1"
dotenv = "^0.9.9"
djangorestframework = "^3.16.0"
django-filter = "^25.1"
djangorestframework-simplejwt = "^5.5.0"
coreapi = "^2.3.3"
drf-yasg = "^1.21.10"
openapi = "^2.0.0"
stripe = "^12.2.0"
eventlet = "^0.40.0"
django-celery-beat = "^2.8.1"
celery = "^5.5.3"
redis = "^6.2.0"
ipython = "^9.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
